--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,8 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>My Meteor React app</title>
 </head>
+
+<body>
+  <div id="react-root"></div>
+</body>
